trogdord: began implementing unit tests for EntityController

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -396,6 +396,7 @@ if (Boost_FOUND)
 		src/trogdord/test/scopes/controller.cpp
 		src/trogdord/test/scopes/global.cpp
 		src/trogdord/test/scopes/game.cpp
+		src/trogdord/test/scopes/entity.cpp
 	)
 
 	target_include_directories(test_trogdord
