trogdord: wrote unit test for TangibleController::getEntityList()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -397,6 +397,7 @@ if (Boost_FOUND)
 		src/trogdord/test/scopes/global.cpp
 		src/trogdord/test/scopes/game.cpp
 		src/trogdord/test/scopes/entity.cpp
+		src/trogdord/test/scopes/tangible.cpp
 	)
 
 	target_include_directories(test_trogdord
