--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -189,12 +189,12 @@ install(TARGETS standalone DESTINATION bin COMPONENT standalone OPTIONAL)
 # works with pkg-config, so in that case you shouldn't have an issue.)
 if(DEFINED ENV{INIH_INCLUDE_DIRS})
 	message("Manually specified include path for inih.")
-	set(INIH_INCLUDE_DIRS $ENV{INIH_INCLUDE_DIRS})
+	set(INIH_INCLUDEDIR $ENV{INIH_INCLUDE_DIRS})
 else(DEFINED ENV{INIH_INCLUDE_DIRS})
 	pkg_check_modules(INIH inih)
 endif(DEFINED ENV{INIH_INCLUDE_DIRS})
 
-if (INIH_INCLUDE_DIRS)
+if (INIH_INCLUDEDIR)
 
 	CHECK_INCLUDE_FILE_CXX("asio.hpp" HAVE_ASIO)
 
@@ -304,11 +304,11 @@ if (INIH_INCLUDE_DIRS)
 
 	endif (HAVE_ASIO)
 
-else (INIH_INCLUDE_DIRS)
+else (INIH_INCLUDEDIR)
 
 	add_custom_target(trogdord echo "\"Skipping\\040trogdord\\040because\\040the\\040inih\\040library\\040isn't\\040installed\\040in\\040a\\040place\\040where\\040CMake\\040can\\040find\\040it\\040(you\\040can\\040try\\040setting\\040the\\040INIH_INCLUDE_DIRS\\040environment\\040variable\\040manually.)\"")
 
-endif (INIH_INCLUDE_DIRS)
+endif (INIH_INCLUDEDIR)
 
 ###############################################################################
 
