trogdord: CMakeFiles.txt fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,6 +235,7 @@ if (INIH_INCLUDEDIR)
 
 		set(TROGDORD_INCLUDES
 			PUBLIC ${PROJECT_SOURCE_DIR}/src/core/include
+			PUBLIC ${INIH_INCLUDEDIR}
 		)
 
 		set(TROGDORD_LIBRARIES_MINUS_CORE
