core: wrote initial implementation of trogdor::serial::Serializable for maintaining data that can be serialized and trogdor::serial::Driver for doing the actual serialization/deserialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ set(CORE_SOURCES
 	src/core/entities/player.cpp
 	src/core/entities/room.cpp
 	src/core/entities/thing.cpp
+	src/core/serial/driver.cpp
 )
 
 set(CORE_INCLUDES
