core: began implementing json serialization driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,7 @@ set(CORE_SOURCES
 	src/core/entities/room.cpp
 	src/core/entities/thing.cpp
 	src/core/serial/driver.cpp
+	src/core/serial/drivers/json.cpp
 )
 
 set(CORE_INCLUDES
