standalone: began implementing example JSON serialization driver to test and demonstrate how serialization works in core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,7 @@ add_executable(standalone
 	src/standalone/streamerr.cpp
 	src/standalone/actions/timeaction.cpp
 	src/standalone/actions/quitaction.cpp
+	src/standalone/serial/json.cpp
 )
 
 add_dependencies(standalone trogdor)
