standalone and core: began implementing deserialization of saved game state

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,7 @@ add_executable(standalone
 	src/standalone/actions/timeaction.cpp
 	src/standalone/actions/quitaction.cpp
 	src/standalone/actions/saveaction.cpp
+	src/standalone/actions/loadaction.cpp
 	src/standalone/serial/json.cpp
 )
 
