trogdord: began implementing config options for serialization

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -75,3 +75,19 @@
 ; This is the default path where game definition files are stored. Relative
 ; paths are based on the root directory where trogdord was installed.
 ; definitions_path=share/trogdor
+
+[state]
+
+; Whether or not to enable the saving and loading of game and server state. This
+; is off by default if support for the JSON serialization format was turned off
+; during compilation and on by default otherwise.
+; enabled=true
+
+; This is the serialization format that should be used when saving a game's
+; state. By default, we use json (requires support for the JSON serialization
+; driver to be turned on during the compilation of the core library.)
+; format=json
+
+; This is the default path where game state is saved. Relative paths are based
+; on the root directory where trogdord was installed.
+; save_path=var/trogdor/state
