trogdord: install target now creates a place to store saved state, state is now disabled by default in trogdord.ini, and began implementing code to check the validity of the configured location for storing state

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -353,6 +353,7 @@ if (INIH_INCLUDEDIR)
 		add_definitions(-DTROGDORD_INI_PATH=\"${CMAKE_INSTALL_PREFIX}/etc/trogdord/trogdord.ini\")
 
 		install(TARGETS trogdord DESTINATION bin COMPONENT trogdord OPTIONAL)
+		install(DIRECTORY DESTINATION var/trogdord/state COMPONENT trogdord OPTIONAL)
 
 	else (HAVE_ASIO)
 
