--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -79,9 +79,8 @@
 [state]
 
 ; Whether or not to enable the saving and loading of game and server state. This
-; is off by default if support for the JSON serialization format was turned off
-; during compilation and on by default otherwise.
-; enabled=true
+; is off by default.
+; enabled=false
 
 ; This is the serialization format that should be used when saving a game's
 ; state. By default, we use json (requires support for the JSON serialization
