trogdord: finished implementing GameWrapper::initState() and began GameWrapper::restore()

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -90,3 +90,8 @@
 ; This is the default path where game state is saved. Relative paths are based
 ; on the root directory where trogdord was installed.
 ; save_path=var/trogdord/state
+
+; If state is enabled, this determines whether or not we should automatically
+; restore the server's last known state the next time it starts up. This is
+; disabled by default.
+; auto_restore=false
