trogdord: implemented dump on shutdown feature

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -95,3 +95,7 @@
 ; restore the server's last known state the next time it starts up. This is
 ; disabled by default.
 ; auto_restore=false
+
+; If set to true, and if the state feature is enabled, the server's state will
+; be dumped to disk on shutdown.
+; dump_on_shutdown=false
