trogdord: added config option to trogdor.ini for crash recovery

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -99,3 +99,10 @@
 ; If set to true, and if the state feature is enabled, the server's state will
 ; be dumped to disk on shutdown.
 ; dump_on_shutdown=false
+
+; If set to true, and if the state feature is enabled, the server will attempt
+; to dump its state to disk before crashing due to uncaught exceptions or other
+; unusual behavior. The server will also try to recover from lower-level errors
+; like segfaults, although recovering from such issues is dicey at best and is
+; not something to rely on.
+; crash_recovery=false
