trogdord: slight change to comment in default trogdord.ini

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -102,7 +102,6 @@
 
 ; If set to true, and if the state feature is enabled, the server will attempt
 ; to dump its state to disk before crashing due to uncaught exceptions or other
-; unusual behavior. The server will also try to recover from lower-level errors
-; like segfaults, although recovering from such issues is dicey at best and is
-; not something to rely on.
+; unusual behavior. This will not be invoked for things like SIGSEGV, SIGFPE,
+; etc. I tried, and it doesn't work.
 ; crash_recovery=false
