trogdord: began implementing max dumps per game feature

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -91,6 +91,10 @@
 ; on the root directory where trogdord was installed.
 ; save_path=var/trogdord/state
 
+; This is the maximum number of dumps to store for each game. If set to 0, we
+; keep all previous dumps.
+; max_dumps_per_game=1
+
 ; If state is enabled, this determines whether or not we should automatically
 ; restore the server's last known state the next time it starts up. This is
 ; disabled by default.
