test_trogdord: modified unit tests for trogdord to run as non-root user

--- a/.github/workflows/actions/test_trogdord/Dockerfile
+++ b/.github/workflows/actions/test_trogdord/Dockerfile
@@ -7,4 +7,11 @@ RUN cd /usr/include && wget https://raw.githubusercontent.com/onqtam/doctest/2.4
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
+# test_trogdord needs to run as a non-root user because it relies on file
+# permissions that don't apply to root.
+RUN groupadd -r app &&\
+    useradd -r -g app -d /home/app -s /sbin/nologin -c "Docker image user" app
+RUN chown -R app:app /home/app
+USER app
+
 ENTRYPOINT ["/entrypoint.sh"]
