--- a/.github/workflows/actions/test_php/Dockerfile
+++ b/.github/workflows/actions/test_php/Dockerfile
@@ -9,7 +9,7 @@ RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true
 RUN apt-get install -y tzdata
 
 # Install and build trogdord and its dependencies so we can use it in our PHP tests
-RUN apt-get install -y install sudo bash wget git g++ cmake libasio-dev rapidjson-dev libhiredis-dev libxml2 libxml2-dev liblua5.3 liblua5.3-dev libinih1 libinih-dev redis-server
+RUN apt-get -y install sudo bash wget git g++ cmake libasio-dev rapidjson-dev libhiredis-dev libxml2 libxml2-dev liblua5.3 liblua5.3-dev libinih1 libinih-dev redis-server
 RUN cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_REDIS=ON -DENABLE_SERIALIZE_JSON=ON .
 RUN make -j2 trogdord && make install
 
