php/trogdord: re-added PHP 8.0 to GitHub action for testing

--- a/.github/workflows/actions/test_php/Dockerfile
+++ b/.github/workflows/actions/test_php/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get -y install sudo bash wget git g++ cmake libasio-dev rapidjson-dev li
 
 # Install build dependencies for each supported PHP version
 RUN apt-get update
-RUN apt-get -y install git g++ libasio-dev rapidjson-dev php7.2-cli php7.2-dev php7.3-cli php7.3-dev php7.4-cli php7.4-dev
+RUN apt-get -y install git g++ libasio-dev rapidjson-dev php7.2-cli php7.2-dev php7.3-cli php7.3-dev php7.4-cli php7.4-dev php8.0-cli php8.0-dev
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
