php/trogdord: fixed Dockerfile for tests

--- a/.github/workflows/actions/test_php/Dockerfile
+++ b/.github/workflows/actions/test_php/Dockerfile
@@ -16,6 +16,8 @@ RUN apt-get update
 RUN apt-get -y install git g++ libasio-dev rapidjson-dev php7.2-cli php7.2-dev php7.3-cli php7.3-dev php7.4-cli php7.4-dev
 
 # Build and install PHP 8.0 from source
+COPY buildphp.sh /buildphp.sh
+RUN chmod +x /buildphp.sh
 RUN /buildphp.sh 8.0.2
 
 COPY entrypoint.sh /entrypoint.sh
