php/trogdord: now building all PHP versions from source

--- a/.github/workflows/actions/test_php/Dockerfile
+++ b/.github/workflows/actions/test_php/Dockerfile
@@ -9,16 +9,18 @@ RUN export DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true
 RUN apt-get install -y tzdata
 
 # Install dependencies for trogdord so we can build and use it for our PHP tests
-RUN apt-get -y install sudo bash wget git g++ cmake zlib1g-dev libonig-dev libasio-dev rapidjson-dev libhiredis-dev libxml2 libxml2-dev liblua5.3 liblua5.3-dev libinih1 libinih-dev redis-server
+RUN apt-get -y install sudo bash wget git g++ cmake libasio-dev rapidjson-dev libhiredis-dev libxml2 libxml2-dev liblua5.3 liblua5.3-dev libinih1 libinih-dev redis-server
 
 # Install build dependencies for each supported PHP version
 RUN apt-get update
-RUN apt-get -y install git g++ libasio-dev rapidjson-dev php7.2-cli php7.2-dev php7.3-cli php7.3-dev php7.4-cli php7.4-dev
+RUN apt-get -y install git g++ zlib1g-dev libonig-dev 
 
-# Build and install PHP 8.0 from source
+# Build and install each PHP version from source
 COPY buildphp.sh /buildphp.sh
 RUN chmod +x /buildphp.sh
 RUN /buildphp.sh 7.2.34
+RUN /buildphp.sh 7.3.27
+RUN /buildphp.sh 7.4.15
 RUN /buildphp.sh 8.0.2
 
 COPY entrypoint.sh /entrypoint.sh
