--- a/src/nodejs/trogdord/package.json
+++ b/src/nodejs/trogdord/package.json
@@ -20,7 +20,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/index.js"
   },
   "engines": {
     "node": ">=12.0.0"
