core: implemented virtual method serial::Driver::deserializeFromDisk() to make the handling of various data formats more uniform

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -84,8 +84,10 @@
 
 ; This is the serialization format that should be used when saving a game's
 ; state. By default, we use json (requires support for the JSON serialization
-; driver to be turned on during the compilation of the core library.)
+; driver to be turned on during the compilation of the core library.) The
+; other available format is sqlite.
 ; format=json
+; format=sqlite
 
 ; This is the default path where game state is saved. Relative paths are based
 ; on the root directory where trogdord was installed.
