updated actions to support sqlite serialization driver

--- a/.github/workflows/actions/test_trogdord/Dockerfile
+++ b/.github/workflows/actions/test_trogdord/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:20.04
 
 ENV DEBIAN_FRONTEND="noninteractive" TZ="America/Los_Angeles"
-RUN apt-get update && apt-get -y install sudo bash wget git g++ cmake libasio-dev rapidjson-dev libhiredis-dev libxml2 libxml2-dev liblua5.3 liblua5.3-dev libinih1 libinih-dev redis-server
+RUN apt-get update && apt-get -y install sudo bash wget git g++ cmake libasio-dev sqlite3 libsqlite3-dev rapidjson-dev libhiredis-dev libxml2 libxml2-dev liblua5.3 liblua5.3-dev libinih1 libinih-dev redis-server
 RUN cd /usr/include && wget https://raw.githubusercontent.com/onqtam/doctest/2.4.4/doctest/doctest.h
 
 COPY entrypoint.sh /entrypoint.sh
