trogdord: update documentation

--- a/src/trogdord/etc/trogdord.ini
+++ b/src/trogdord/etc/trogdord.ini
@@ -83,9 +83,8 @@
 ; enabled=false
 
 ; This is the serialization format that should be used when saving a game's
-; state. By default, we use json (requires support for the JSON serialization
-; driver to be turned on during the compilation of the core library.) The
-; other available format is sqlite.
+; state. The two built-in formats (if enabled during compilation) are json
+; and sqlite.
 ; format=json
 ; format=sqlite
 
